<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_container"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_centerHorizontal="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/img_container" >

            <EditText
                android:id="@+id/firstNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="first name"
                android:background="@null"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNameContainer"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="last name"
                android:background="@null"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/lastNameContainer" >

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="email"
                android:background="@null"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/emailContainer" >

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="phone number"
                android:background="@null"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/academicStatusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNoContainer"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/academic_status_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/academicStatusTV"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:spinnerMode="dropdown" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/spinner" >

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="new password"
                android:background="@null"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/passwordContainer" >

            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="confirm password"
                android:background="@null"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordConfirmContainer"
            android:layout_margin="16dp"
            android:background="@drawable/register_rounded_button"
            android:textColor="@color/colorWhite"
            android:text="SAVE" />


        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>