...
    <string name="public_radio_button">public</string>
    <string name="private_radio_button">private</string>
    <string name="done_button">DONE</string>

    <!-- for menu items on the navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_myGroups">My Groups</string>
    <string name="menu_createGroup">Create Group</string>
    <string name="menu_exploreGroup">Search Groups</string>

    <!-- button that appears in the recycler view in my groups page -->
    <string name="see_available_groups">see available groups</string>
...
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="post_hint">add link and/or attach a pdf file</string>

    <!-- string values for UserProfileFragment -->
    <string name="user_profile_name">USERNAME</string>
    <string name="chat_button_text">START CHAT</string>
    <string name="block_button_text">BLOCK</string>
    <string name="unblock_button_text">UN-BLOCK</string>
    <string name="friend_button_text">ADD FRIEND</string>
    <string name="unfriend_button_text">REMOVE FRIEND</string>

</resources>
...
