...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.525" />


            <Button
                android:id="@+id/editProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/academicStatusTV"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:paddingEnd="10dp"
...
