<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.example.gradshub.MyGroupsFragment"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".main.ui.mygroups.MyGroupsFragment"
        tools:listitem="@layout/fragment_item" />

    <Button
        android:id="@+id/exploreGroupsBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/list"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:text="@string/see_available_groups" />

</RelativeLayout>


