<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--
        these items appear on the navigation drawer as menu items that take the user to different destinations (fragments)
        within the app.
     -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/feedListFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/friendsListFragment"
            android:icon="@drawable/ic_menu_my_groups"
            android:title="Friends" />

        <item
            android:id="@+id/myGroupsListFragment"
            android:icon="@drawable/ic_menu_my_groups"
            android:title="@string/menu_myGroups" />
        <item
            android:id="@+id/createGroupFragment"
            android:icon="@drawable/ic_menu_create_group"
            android:title="@string/menu_createGroup" />

        <item
            android:id="@+id/exploreGroupsFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_exploreGroup" />

        <item
            android:id="@+id/scheduleFragment"
            android:icon="@drawable/ic_schedule"
            android:title="Schedule" />

        <item
            android:id="@+id/chatsListFragment"
            android:icon="@drawable/ic_message"
            android:title="Direct Messages" />

        <item
            android:id="@+id/usersListFragment"
            android:icon="@drawable/ic_search"
            android:title="Search Users" />


    </group>

</menu>
